feat/register-box

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             <span class="registr">Forget password</span>
         </p>
       </div>
+
+      <div id="register-box">
+        <h3>Register</h3>
+        <input type="text" id="name" placeholder="name" />
+        <input type="text" id="userReg" placeholder="username" />
+        <input type="password" id="pswReg" placeholder="password" />
+        <button type="submit" id="btnReg">Sign up</button>
+        <p class='back-login-page'>
+          <span class="back-login">Login</span>
+        </p>
+      </div>
     </div>
     <div id="footer">
       <p class='foot-p'>© ZB</p>
