--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Login Page</title>
   </head>
 
@@ -23,8 +23,8 @@
         <input type="password" id="psw" placeholder="password" />
         <button type="submit" id="btn">Log in</button>
         <p class='forget-registr-box'>
-            <span class="forget">Forget password</span>
-            <span class="registr">Forget password</span>
+            <span class="forget">Forgot Password</span>
+            <span class="registr">Register</span>
         </p>
       </div>
 
@@ -42,6 +42,6 @@
     <div id="footer">
       <p class='foot-p'>© ZB</p>
     </div> -->
-    <script src="./app.js"></script>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
